[gd_scene load_steps=9 format=3 uid="uid://cqago4dchak01"]

[ext_resource type="Script" path="res://Instances/UI/OptionUpgrade/OptionItem.gd" id="1_xxwi2"]
[ext_resource type="Texture2D" uid="uid://da8g5f35coqxu" path="res://Instances/Resources/Upgrades/Bullet/Damage/sprite_icons015.png" id="2_w1lgk"]
[ext_resource type="Texture2D" uid="uid://bsnpicuksmrkl" path="res://Assets/GUI/button.png" id="5_4h00e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_em7p5"]

[sub_resource type="FontFile" id="FontFile_86pru"]
face_index = null
embolden = null
transform = null
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/15/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3867q"]
resource_local_to_scene = true
texture = ExtResource("5_4h00e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l1432"]
resource_local_to_scene = true
texture = ExtResource("5_4h00e")
modulate_color = Color(1, 0.709804, 0.654902, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_muhcf"]
resource_local_to_scene = true
texture = ExtResource("5_4h00e")
modulate_color = Color(1, 0.337255, 0.337255, 1)

[node name="Option" type="PanelContainer"]
process_mode = 2
offset_right = 402.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxTexture_em7p5")
script = ExtResource("1_xxwi2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ControlSpace3" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="iconPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"PanelIconQuad"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/iconPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="bdIcon" type="ColorRect" parent="HBoxContainer/iconPanel/MarginContainer"]
show_behind_parent = true
layout_mode = 2
color = Color(0.894118, 0.65098, 0.447059, 1)

[node name="Icon" type="TextureRect" parent="HBoxContainer/iconPanel/MarginContainer"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 2
texture = ExtResource("2_w1lgk")

[node name="ControlSpace" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="OptionText" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_colors/font_shadow_color = Color(0.215686, 0.215686, 0.215686, 1)
text = "+1.1 FIRE RATE"

[node name="DescriptionText" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_colors/font_shadow_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = SubResource("FontFile_86pru")
theme_override_font_sizes/font_size = 15
text = "+1.1 FIRE RATE"
autowrap_mode = 3

[node name="ControlSpace2" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 20.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ButtonOption" type="Button" parent="HBoxContainer/CenterContainer"]
unique_name_in_owner = true
process_mode = 2
custom_minimum_size = Vector2(90, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_3867q")
theme_override_styles/hover = SubResource("StyleBoxTexture_l1432")
theme_override_styles/pressed = SubResource("StyleBoxTexture_muhcf")
